fixade bredden på kebabWrap

--- a/src/App.css
+++ b/src/App.css
@@ -547,6 +547,7 @@ button:hover {
   display: flex;
   position: relative;
   left: 70%;
+  width: 100px;
 }
 #sparadeNamnKlasser {
   size: 15px;
